请求分页管理技术:请求页表=页号+状态位+访问字段+修改位+外存地址    与基本页表的不同在于:如果查快表未命中则查慢表,查慢表未命中则触发缺页中断,,,,OS中断处理程序将页面调入内存,并且直接加入快表,,查快表(命中)--访问目标内存单元       ;         置换出内存的页面如果发生了修改,则将快表对应的页面删除,,以及把外存对应的页面旧数据覆盖...

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -508,3 +508,49 @@
 ### 总结
 
 ![image-20220826114827608](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208261148818.png)
+
+## 3.2_2 请求分页管理
+
+![image-20220827070215988](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270702345.png)
+
+### 页表机制
+
+> 请求页表=页号+状态位+访问字段+修改位+外存地址
+
+![image-20220827070550502](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270705396.png)
+
+### 缺页中断机构
+
+![image-20220827071039091](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270710170.png)
+
+#### 缺页中断
+
+![image-20220827071155321](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270711429.png)
+
+### 地址变换机构
+
+#### 请求分页与基本分页的主要区别
+
+![image-20220827071457636](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270715917.png)
+
+#### 流程图
+
+> 不同点在于:
+>
+> - 如果慢表(请求页表)中页面未调进内存,产生缺页中断,之后由OS的缺页中断程序调入
+> - 如果调入主存的页面发生过修改,,则快表的页面也需要修改
+> - 置换的页面如果发生过修改,,则对应的外村的页面也需要修改
+
+![image-20220827071931291](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270719760.png)
+
+#### 变换过程
+
+![image-20220827072529470](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270725589.png)
+
+![image-20220827072800549](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270728233.png)
+
+### 总结
+
+> 重在理解与基本分页存储管理的区别
+
+![image-20220827073255324](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270732807.png)
