页面置换算法:1.最佳置换算法OPT:性能最高,但无法实现,,,因为需要预判将来的页面使用情况...2,先进先出置换算法FIFO:先进入内存的页面先被调出,但是存在Belady异常:分配的物理块越多,缺页的次数不增反减,与实际运行规律不适应,,因此效率差....3.最近最久未使用置换算法LRU:性能最接近最佳置换算法,性能较好..但是实现需要专门的硬件,,实现困难,开销大........4.时钟置换算法CLOCK:也称NRU最近未用算法:性能和开销均衡,,链接成一个循环队列,,但是需要单独设置访问位&修改位....简版CLOCK(只需要检查访问位为0也就是未访问的)调出,,改进版(访问位,修改位置),,优先级(0,0)->(0,1)->(修改访问位(0,~))->(0,0)->(0,1)...

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -554,3 +554,73 @@
 > 重在理解与基本分页存储管理的区别
 
 ![image-20220827073255324](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270732807.png)
+
+## 3.2_3 页面置换算法
+
+![image-20220827082312884](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270823940.png)
+
+### 最佳置换OPT
+
+> - `预判将来`最长时间不被访问的页面并置换出
+> - 性能最好
+>
+> - `无法实现`
+
+![image-20220827082625907](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270826941.png)
+
+#### 缺页和页面置换
+
+![image-20220827082946937](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270829883.png)
+
+### 先进先出置换FIFO
+
+> - 每次淘汰的页面是`最早进入内存`的页面
+> - 先后顺序形成了`队列`,,每次换出`队头页面`即可
+> - 队列的最大长度取决于`分配的内存块`
+
+![image-20220827083555028](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270835117.png)
+
+#### Belady异常
+
+> - 分配的物理块越多,缺页次数不减反增
+>
+> - 导致与实际运行规律不适应,,`FIFO算法性能差`
+
+![image-20220827083851301](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270838614.png)
+
+### 最近最久未使用置换LRU
+
+> - 性能最接近最佳置换算法,性能好
+> - 实现需要专门的硬件
+> - 实现困难,开销大
+
+![image-20220827084412048](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270844519.png)
+
+### 时钟置换CLOCK
+
+> - 也称NRU(最近未用算法)
+> - 性能和开销均衡的算法
+> - 链接成的一个`循环队列`
+> - 单独设置`访问位`&`修改位`
+
+#### 简版
+
+> - 只管最近是否访问过,,也就是`访问位是否为0`,即可调出
+> - 检查过程中,如果是1(最近访问过),则将其置0,避免死循环
+> - `最多2轮`扫描检查
+
+![image-20220827085124011](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270851544.png)
+
+#### 改进版
+
+> - 不仅是考虑`是否最近被访问过`,,而且还要考虑`是否被修改过`
+> - 被修改过的内存块如果进行置换的话,,需要写回外存,代价较大
+> - `优先淘汰(0,0)`最近未被访问&未修改的内存块
+>   - `(0,0)`->`(0,1)`->设置所有访问位为0,`(0,~)`->`(0,0)`->`(0,1)`
+> - `最多4轮`扫描检查
+
+![image-20220827095358560](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270954391.png)
+
+### 总结
+
+![image-20220827095625082](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270956297.png)
