页面分配,置换策略:固定分配和可变分配,,局部置换和全局置换..(只有固定全局置换是不存在的)          何时调入页面:预调入(运行前)or请求调页策略(运行中)       何处调入页面:1.对换区够 2.对换取不够 3.UNIX方式        抖动现象:频繁的将页面调入调出行为称为抖动或者是颠簸,主要的原因是系统分配的物理块数不够(驻留集不够大)    工作集:进程实际访问的页面的集合 <= 驻留集(分配的内存块的集合)

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -624,3 +624,58 @@
 ### 总结
 
 ![image-20220827095625082](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208270956297.png)
+
+## 3.2_4 页面分配策略,抖动,工作集
+
+![image-20220827101300176](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271013360.png)
+
+### 驻留集
+
+> 全局置换意味着物理块数必然发生改变
+>
+> 因此不存在全局的固定置换
+
+![image-20220827101920535](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271019603.png)
+
+### 页面分配,置换策略
+
+![image-20220827103202879](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271032430.png)
+
+### 何时调入页面
+
+![image-20220827103417409](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271034835.png)
+
+### 何处调入页面
+
+#### 1.对换区足够
+
+![image-20220827104532401](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271045807.png)
+
+#### 2.对换区不够
+
+![image-20220827104751052](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271047587.png)
+
+####  3.UNIX方式
+
+![image-20220827105004443](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271050835.png)
+
+### 抖动(颠簸)现象
+
+> - `频繁的页面调入调出行为称为抖动`
+>
+> - `主要原因`:进程频繁访问的页面数高于可用的物理块数
+>
+>   (`分配给进程的物理块数不够`)
+
+![image-20220827105408940](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271054348.png)
+
+### 工作集
+
+> - 为了研究每个进程应该分配多少个物理块
+> - 驻留集>=工作集,否则会`抖动`
+
+![image-20220827111457262](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271114843.png)
+
+### 总结
+
+![image-20220827111705876](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271117547.png)
