内存映射文件:传统文件访问方式:需要自己手动的设置访问以及系统调用,不适合程序员,比较麻烦          内存映射方式:1.适合程序员访问文件,其他页面的调入调出由OS自动实现...2.实现进程共享文件(通过OS自动让两个进程访问的逻辑地址映射到同一个页号),实现共享

--- a/操作系统/第三章-内存管理.md
+++ b/操作系统/第三章-内存管理.md
@@ -679,3 +679,33 @@
 ### 总结
 
 ![image-20220827111705876](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271117547.png)
+
+## 3.2_5 内存映射文件
+
+![image-20220827112500900](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271125326.png)
+
+> - 内存映射文件:OS向上层程序员提供的功能(`系统调用`)
+>
+> 1. 方便程序员访问文件数据
+>
+> 2. 多个进程共享同一个文件
+
+### 传统文件访问方式
+
+> 打开->找到地址->读/写数据
+
+![image-20220827113038528](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271130649.png)
+
+### 内存映射方式
+
+> 1. 更方便程序员访问文件,,其他的调入调出由OS自动实现
+
+![image-20220827113753122](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271137266.png)
+
+> 2. 实现进程`共享文件`
+
+![image-20220827114049655](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271140084.png)
+
+### 总结
+
+![image-20220827114203405](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271142994.png)
