文件的逻辑结构:无结构文件(流式文件,txt)  有结构文件(有具体关联的结构)  有结构文件的逻辑结构分为:1.顺序文件(定长与不定长文件   串型结构和顺序结构:可以折半查找)  2.索引文件(索引表:本质上是一个定长记录的顺序结构的顺序文件,,支持随机访问,,如果关键字有序的话,可以实现折半查找)  3.索引顺序文件(索引顺序表:是一个定长记录的串型结构的顺序文件,是索引文件的瘦身版,将记录细分成更小的单元)   4.多级索引顺序文件

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -12,7 +12,7 @@
 
 ![image-20220827191935842](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271919484.png)
 
-[文件的逻辑结构](#文件的逻辑结构)
+[文件的逻辑结构](#4.1_2 文件的逻辑结构)
 
 ![image-20220827192057601](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271921284.png)
 
@@ -44,8 +44,6 @@
 
 [文件的物理结构]()
 
-[文件的逻辑结构]()
-
 ### 其他文件管理功能
 
 ![image-20220827193758826](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271938345.png)
@@ -55,3 +53,63 @@
 ### 总结
 
 ![image-20220827193955828](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271939376.png)
+
+## 4.1_2 文件的逻辑结构
+
+![image-20220827195347162](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271953465.png)
+
+### 无结构文件
+
+> 无结构特性
+
+![image-20220827195558617](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271955711.png)
+
+### 有结构文件
+
+![image-20220827195734160](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271957677.png)
+
+- 是否定长
+
+![image-20220827195958600](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272000293.png)
+
+#### 逻辑结构
+
+##### 1.顺序文件
+
+![image-20220827200506207](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272005155.png)
+
+
+
+![image-20220827201310404](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272013992.png)
+
+##### 2.索引文件
+
+> 索引表:是一个`定长记录的顺序结构的顺序文件`,支持`随机访问`
+>
+> - 如果关键字有序的话,可实现`折半查找`
+
+![image-20220827201528940](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272015305.png)
+
+##### 3.索引顺序文件
+
+> 索引顺序表:是一个`定长记录的串结构的顺序文件`
+>
+> - 相对于`索引文件的瘦身版`
+
+![image-20220827202235994](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272022772.png)
+
+###### 检索效率分析
+
+![image-20220827204400433](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272044800.png)
+
+##### 4.多级索引顺序文件
+
+![image-20220827204850037](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272048620.png)
+
+### 总结
+
+![image-20220827205002384](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272050031.png)
+
+#### 有结构文件
+
+![image-20220827213409947](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272134099.png)
