文件目录:文件控制块FCB:1.单级目录结构:实现了按名存取,但是不允许重名文件,只适合单用户系统   2.两级目录结构:实现了访问控制,适合多用户,但是用户不能为自己的文件进行分类操作   3.多级目录结构:实现了多用户之间的访问控制,,以及用户能够对文件进行分类,,,引入了当前目录(存放在内存中,,以减少IO访问的次数)   4.无环图目录结构:可以实现不同文件名指向同一个文件,,并且设置了共享计数器,,删除操作只是删除了目录结构以及共享计数器-1,,只有当共享计数器=0时,才会真正的删除该文件                               索引结点(FCB的改进版):把FCB瘦身,,除文件名之外的其他属性项换成一个索引结点(也分为磁盘索引结点,,内存索引结点(增加了修改位以及访问位)):::优点:大大增加了文件的检索速度

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -20,7 +20,7 @@
 
 ![image-20220827192719936](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271927337.png)
 
-[目录](目录)
+[目录](#4.1_3 文件目录)
 
 > 其实就是文件夹
 
@@ -113,3 +113,85 @@
 #### 有结构文件
 
 ![image-20220827213409947](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272134099.png)
+
+## 4.1_3 文件目录
+
+![image-20220827214503276](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272145196.png)
+
+![image-20220827214855284](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208272148848.png)
+
+### 文件控制块FCB
+
+![image-20220828063022135](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280630546.png)
+
+ FCB
+
+> 文件的目录:FCB文件控制块(目录项)的有序集合
+
+![image-20220828063206895](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280632529.png)
+
+ ![image-20220828063536146](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280635560.png)
+
+#### 1.单级目录结构
+
+> - 优点:
+>
+>   - 实现了`按名存取`
+>
+> - 缺点:
+>
+>   - `不允许文件重名`
+>
+>   - `不适合多用户`
+
+![image-20220828063814458](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280638486.png)
+
+#### 2.两级目录结构
+
+> - 优点:`支持多用户`的访问控制
+> - 缺点:不支持用户对自己的文件进行分类
+
+![image-20220828064228781](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280642019.png)
+
+####  3.多级目录结构
+
+> 又称`树形结构`
+>
+> - 优点:
+>
+>   - 方便对文件分类
+>
+>   - 能够更有效的进行文件的管理和保护
+>
+> - 缺点:
+>   - `不便于实现文件的共享`
+
+![image-20220828064457000](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280644875.png)
+
+##### 当前目录
+
+![image-20220828064821791](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280648548.png)
+
+#### 4.无环图目录结构
+
+![image-20220828065409124](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280654745.png)
+
+##### 删除操作
+
+> 只删除对应的文件目录`&`共享计数器-1
+
+![image-20220828065539975](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280655394.png)
+
+### 索引结点(FCB的改进版)
+
+> 让文件的索引速度更快,实现`瘦身`
+
+![image-20220828070111625](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280701756.png)
+
+#### 优点
+
+![image-20220828070604747](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280706033.png)
+
+### 总结
+
+![image-20220828070900940](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280709191.png)
