文件的物理结构(文件的分配方式)  1.连续分配(支持顺序访问以及随机访问(直接访问),连续分配的文件在顺序读/写的速度最快     缺点:连续分配的空间文件不方便拓展,,,并且会产生磁盘碎片,类似于外部碎片)         2.链接分配 (隐式链接和显式链接)   默认是隐式链接...显示连接一个磁盘需要分配一个文件分配表(FAT),常驻在内存,,可以减少IO次数....二者都不会出现

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -8,7 +8,7 @@
 
 ![image-20220827191728030](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271917402.png)
 
-### 文件内部数据如何组织?
+### `文件内部`数据如何组织?
 
 ![image-20220827191935842](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271919484.png)
 
@@ -16,7 +16,7 @@
 
 ![image-20220827192057601](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271921284.png)
 
-### 文件之间数据如何组织?
+### `文件之间`数据如何组织?
 
 ![image-20220827192719936](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271927337.png)
 
@@ -34,7 +34,7 @@
 
 [背后的处理]()
 
-### 文件如何存放在外存?
+### 文件`如何存放在外存`?
 
 > 以`块`为单位,为文件分配存储空间
 
@@ -42,7 +42,7 @@
 
 ![image-20220827193620519](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271936177.png)
 
-[文件的物理结构]()
+[文件的物理结构](#4.2_4 物理结构(上))
 
 ### 其他文件管理功能
 
@@ -195,3 +195,87 @@
 ### 总结
 
 ![image-20220828070900940](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280709191.png)
+
+## 4.2_4 物理结构(上)
+
+![image-20220828072819740](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280728000.png)
+
+
+
+> 又称[文件的分配方式](#文件分配方式),管理有文件数据的磁盘块
+
+![image-20220828073156805](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280731319.png)
+
+### 磁盘块
+
+> 磁盘与内存进行数据交换更方便
+>
+> 因为大小和内存块,页面大小相同
+
+![image-20220828073330238](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280733438.png)
+
+### 文件块
+
+> 逻辑地址=(逻辑块号,块内地址)
+
+![image-20220828083753317](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280837586.png)
+
+### 文件分配方式
+
+#### 1.连续分配
+
+> 优点1:支持顺序访问和`随机访问`(直接访问)
+
+![image-20220828084204851](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280842283.png)
+
+> 优点2:连续分配的文件在`顺序读/写`速度最快
+
+![image-20220828084517807](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280845000.png)
+
+> 缺点1:连续分配的文件不便于拓展
+
+![image-20220828084736531](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280847661.png)
+
+> 缺点2:会产生磁盘碎片
+>
+> 可以通过`紧凑`的方式处理,但仍需要很多时间
+
+![image-20220828084930416](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280849867.png)
+
+##### 总结
+
+![image-20220828085109946](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280851131.png)
+
+#### 2.链接分配
+
+##### 隐式链接
+
+> 如何实现文件的逻辑块->物理块的转变?
+
+![image-20220828085705497](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280857441.png)
+
+> 是否方便拓展文件
+
+![image-20220828085754397](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280857736.png)
+
+###### 总结
+
+![image-20220828085825095](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280858672.png)
+
+##### 显式链接
+
+> 将链接文件各物理块的指针显示存放在一张表中,
+>
+> `文件分配表FAT`常驻在内存
+>
+> - 一个磁盘对应一张`FAT`
+
+![image-20220828090304871](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280903364.png)
+
+> 如何实现文件逻辑块号->物理块的转变
+
+![image-20220828091258251](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280913311.png)
+
+###### 总结
+
+![image-20220828091922087](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280919376.png)
