--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -279,3 +279,49 @@
 ###### 总结
 
 ![image-20220828091922087](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280919376.png)
+
+## 4.2_5 物理结构(下)
+
+![image-20220828093012046](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280930099.png)
+
+### !!!索引分配
+
+> 文件的`索引表`类似于内存的`页表`
+
+![image-20220828094512939](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280945653.png)
+
+### 逻辑块-物理块如何转换
+
+> 缺点:索引表也需要占用空间
+
+![image-20220828094853435](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280948648.png)
+
+### 如何解决一个磁盘块装不下索引表?
+
+#### 1.链接索引
+
+> 由于一个磁盘块装不下,因此索引块之间采用链接的方式
+>
+> 但是如果文件过大,,访问最后一个逻辑块必须遭到最后一个索引块,效率比较低
+
+![image-20220828100126768](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281001900.png)
+
+#### 2.多层索引
+
+> 如果采用`K层索引架构`,并且`顶级索引表未调入内存`,
+>
+> 则访问一个数据块只需要`K+1次读磁盘操作`
+
+![image-20220828103454876](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281034285.png)
+
+#### 3.混合索引
+
+> 适合小文件,,可以快速访问,读磁盘次数更少
+
+![image-20220828105048791](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281050521.png)
+
+### 总结
+
+![image-20220828105603915](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281056493.png)
+
+![image-20220828111157345](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281112117.png)
