逻辑结构VS物理结构:逻辑结构只针对用户而言,,并且由用户自己自己决定(1.有结构文件的顺序文件,索引文件,索引顺序文件)          物理结构:OS决定,,并且有OS负责逻辑块号到物理块号的映射(三种分配方式:连续分配,链接分配以及索引分配(如果一个磁盘块无法放下索引表 方法1.链接索引 2.多层索引 3.混合索引))

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -325,3 +325,179 @@
 ![image-20220828105603915](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281056493.png)
 
 ![image-20220828111157345](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281112117.png)
+
+## 4.2_6 逻辑结构`VS`物理结构
+
+![image-20220828112800140](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281128409.png)
+
+### 例1:C语言创建无结构文件
+
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+
+int main() {
+	//以"w"写的方式打开"file.txt"文件
+	FILE* fp = fopen("file.txt", "w");
+
+	if (fp == nullptr) {
+		printf("error file!");
+		exit(0);
+	}
+	//写入1w个Hello World
+	for (int i = 0; i < 10000; i++) {
+		fputs("Hello World!", fp);
+	}
+	//关闭文件
+	fclose(fp);
+	return 0;
+}
+```
+
+结果
+
+![image-20220828145828796](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281458625.png)
+
+#### 逻辑结构(用户角度)
+
+```c++
+#include<bits/stdc++.h>
+using namespace std;
+
+int main() {
+	//以"r"读的方式打开文件
+	FILE* fp = fopen("file.txt", "r");
+
+	if (fp == nullptr) {
+		puts("Error file!");
+		exit(0);
+	}
+
+	//读写指针指向16
+	fseek(fp, 16, SEEK_SET);
+	//从读写指针所指位置读出第一个字符
+	char c = fgetc(fp);
+	//打印从文件读出的字符
+	printf("字符:%c", c);
+	//关闭文件
+	fclose(fp);
+
+	return 0;
+}
+```
+
+结果
+
+![image-20220828150838143](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281508609.png)
+
+#### 物理结构(OS角度)
+
+连续分配
+
+![image-20220828151137563](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281511016.png)
+
+链接分配
+
+![image-20220828151208759](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281512075.png)
+
+索引分配
+
+![image-20220828151417443](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281514547.png)
+
+
+
+> 不管如何分配,总能将用户给的逻辑地址->OS物理地址
+
+
+
+### 例2:C语言创建顺序文件
+
+#### 逻辑结构(用户角度)
+
+1. 写文件
+
+```c++
+#include<bits/stdc++.h>
+#define N 10
+
+using namespace std;
+
+typedef struct {
+	int number; //学号
+	char name[30];//姓名
+	char major[30]; //专业
+}Student_info;
+
+void w() {
+	//以"w"写的方式打开文件students.info
+	FILE* fp = fopen("students.info", "w");
+
+	if (fp == nullptr) {
+		printf("error file!");
+		exit(0);
+	}
+	//数组保存N个学生信息
+	Student_info student[N];
+	for (int i = 0; i < N; i++) {
+		student[i].number = i;
+		student[i].name[0] = '?';
+		student[i].major[0] = '?';
+	}
+	//将N个学生的信息写入文件
+	fwrite(student, sizeof(Student_info), N, fp);
+	fclose(fp);
+}
+```
+
+2. 读文件
+
+```c++
+void r() {
+	FILE* fp = fopen("students.info", "r");
+
+	if (fp == nullptr) {
+		printf("Error file!");
+		exit(0);
+	}
+	//文件读写指针指向编号为5的学生记录
+	fseek(fp, 5, SEEK_SET);
+	Student_info stu;
+	//从文件读出一条记录,记录大小为sizeof(Student_info)
+	fread(&stu, sizeof(Student_info), 1, fp);
+	printf("学生编号:%d\n", stu.number);
+	fclose(fp);
+}
+```
+
+#### 物理结构(OS角度)
+
+![image-20220828155707762](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281557997.png)
+
+### 懵逼点?
+
+> 顺序文件采用顺序存储/链式存储
+
+![image-20220828155950173](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281559514.png)
+
+> 链式存储的顺序文件采用链接分配
+
+![image-20220828160319303](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281603131.png)
+
+### 索引
+
+#### 逻辑结构:索引文件
+
+![image-20220828161546235](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281615489.png)
+
+#### 物理结构:索引分配
+
+![image-20220828162632754](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281626445.png)
+
+### 总结
+
+> 各司其职,互不干扰
+>
+> - 逻辑结构:用户看到的样子,并且有用户自己决定
+> - 物理结构:OS决定,,并且OS负责逻辑块号到物理块号的映射
+
+![image-20220828172312092](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281723212.png)
