文件的存储空间管理(空闲分区的管理):划分和初始化  存储空间管理:1.空闲表法  2.空闲链表法  (空闲盘块链,,空闲盘区域链)  3.位示图法   4.成组链接法:超级快(充当了连头的作用,,要保存下一个分组的信息)  回收时注意区分超级块是否满

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -501,3 +501,90 @@ void r() {
 > - 物理结构:OS决定,,并且OS负责逻辑块号到物理块号的映射
 
 ![image-20220828172312092](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281723212.png)
+
+## 4.1_6 文件的存储空间管理
+
+![image-20220828173346767](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281733018.png)
+
+![image-20220828173521649](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281735897.png)
+
+### 存储空间的划分与初始化
+
+> 物理磁盘=目录区+文件区
+>
+> 物理磁盘划分成文件卷(逻辑卷,逻辑盘)
+
+![image-20220828173841289](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281738483.png)
+
+### 存储空间管理
+
+#### 1.空闲表法
+
+> - 使用了一个空闲盘块表,,类似于内存管理的动态分区
+>
+> - 适用于`连续分配方式`
+
+![image-20220828192634675](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281928638.png)
+
+#### 2.空闲链表法
+
+![image-20220828193019599](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281930492.png)
+
+##### 空闲盘块链
+
+> - 适用`离散分配`
+> - 一次只能分配一个空闲盘块,,效率较低
+
+![image-20220828193137633](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281931346.png)
+
+##### 空闲盘区链
+
+> - `离散分配,连续分配`都适用
+>
+> - 一次可以分配多个磁盘块,因此效率较高
+
+![image-20220828193345499](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281933933.png)
+
+#### !!!3.位示图法
+
+![image-20220828193940270](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281939090.png)
+
+##### 如何分配与回收
+
+![image-20220828194111107](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281941431.png)
+
+#### 4.成组链接法
+
+![image-20220828194458464](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281945565.png)
+
+##### 超级块
+
+> 充当了`链头`的作用,,要保存下一个分组的信息
+
+![image-20220828194804360](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281948709.png)
+
+##### 如何分配
+
+###### 分配一个空闲块
+
+![image-20220828195122335](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281951004.png)
+
+###### 分配100个空闲块
+
+![image-20220828195611190](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281956268.png)
+
+##### 如何回收
+
+1. 块数没满,直接插入即可
+
+![image-20220828195958157](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208281959866.png)
+
+2. 块数满了,,复制并新建一个块即可
+
+![image-20220828200344188](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282003721.png)
+
+![image-20220828200408251](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282004470.png)
+
+### 总结
+
+![image-20220828200552748](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282005393.png)
