文件的基本操作:创建文件,,删除文件,打开文件(只是复制一份,并不会真正直接装入内存...索引号:也称文件描述符)

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -24,15 +24,13 @@
 
 > 其实就是文件夹
 
-
-
 ### OS为上层提供哪些功能?
 
 ![image-20220827192607285](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271926960.png)
 
 ![image-20220827192929180](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271929389.png)
 
-[背后的处理]()
+[背后的处理](#4.1_7 文件的基本操作)
 
 ### 文件`如何存放在外存`?
 
@@ -588,3 +586,41 @@ void r() {
 ### 总结
 
 ![image-20220828200552748](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282005393.png)
+
+## 4.1_7 文件的基本操作
+
+![image-20220828201251661](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282012120.png)
+
+### 创建文件Create
+
+![image-20220828201836266](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282018607.png)
+
+### 删除文件Delete
+
+![image-20220828201958496](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282019821.png)
+
+### 打开文件Open
+
+> 只是`复制`到内存的打开文件表
+
+![image-20220828202155236](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282021327.png)
+
+> `进程`和`系统`打开文件表的区别
+
+![image-20220828202637756](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282026200.png)
+
+### 关闭文件Close
+
+![image-20220828202749347](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282027877.png)
+
+### 读文件Read
+
+![image-20220828203037587](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282030906.png)
+
+### 写文件Write
+
+![image-20220828203300600](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282033814.png)
+
+### 总结
+
+![image-20220828203451389](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282034745.png)
