文件共享:索引结点(硬链接,打开计数器为0才是真正的删除)以及符号链(软链接,快捷方式)

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -46,7 +46,9 @@
 
 ![image-20220827193758826](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208271938345.png)
 
-[Windows操作系统]()
+[文件共享](#4.1_8 文件共享)
+
+[文件保护](#4.1_9 文件保护)
 
 ### 总结
 
@@ -624,3 +626,38 @@ void r() {
 ### 总结
 
 ![image-20220828203451389](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282034745.png)
+
+## 4.1_8 文件共享
+
+![image-20220828204146524](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282041691.png)
+
+### 索引结点(硬链接)
+
+![image-20220828204935988](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282049107.png)
+
+### 符号链(软链接)
+
+> - Link型快捷方式
+>
+> - 间接链接
+>
+> - 根据路径信息查找目录的文件
+
+![image-20220828205416272](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282054268.png)
+
+![image-20220828205839061](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282058026.png)
+
+#### 删除
+
+![image-20220828205926597](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282059686.png)
+
+![image-20220828210050961](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282100911.png)
+
+### 总结
+
+![image-20220828210323931](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282103216.png)
+
+
+
+## 4.1_9 文件保护
+
