文件保护:1.口令保护 2.加密保护 3.访问控制 (精简访问列表,,可以实现更加复杂的访问控制,更加灵活)

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -661,3 +661,37 @@ void r() {
 
 ## 4.1_9 文件保护
 
+![image-20220828210600982](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282106279.png)
+
+### 口令保护
+
+![image-20220828210844978](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282108596.png)
+
+### 加密保护
+
+![image-20220828211031466](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282110952.png)
+
+### 访问控制
+
+![image-20220828211332145](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282113532.png)
+
+#### 精简访问列表
+
+![image-20220828211612936](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282116953.png)
+
+#### Windows的访问控制
+
+> - 找到文件的FCB,,
+> - 保护机制更灵活
+
+![image-20220828211828038](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282118099.png)
+
+![image-20220828211902509](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282119792.png)
+
+![image-20220828212034935](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282120155.png)
+
+![image-20220828212048237](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282120270.png)
+
+### 总结
+
+![image-20220828212325135](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282123482.png)
