--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -695,3 +695,13 @@ void r() {
 ### 总结
 
 ![image-20220828212325135](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282123482.png)
+
+## 4.3_1 文件系统的层次结构
+
+![image-20220828213214185](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282132503.png)
+
+### 例题
+
+![image-20220828214020379](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282140924.png)
+
+4.3_2 文件系统的全局结构
