文件的层次结构:物理格式化(低级格式化--划分扇区,检测坏扇区,,并用备用扇区替换坏扇区...)          逻辑格式化(高级)分为文件在外存,内存的结构...         外存的结构:分盘:以及主引导记录MBR负责调入系统盘的引导快以及索引结点区域以及根目录和其他文件目录....系统盘=引导快+超级快(管理空闲分区,充当链头的作用)

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -704,4 +704,22 @@ void r() {
 
 ![image-20220828214020379](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282140924.png)
 
-4.3_2 文件系统的全局结构
+## 4.3_2 文件系统的全局结构
+
+### 物理格式化(低级)
+
+![image-20220828232910425](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208282329744.png)
+
+### 逻辑格式化(高级)
+
+#### 文件在外存的结构
+
+![image-20220829064931897](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290649272.png)
+
+#### 文件在内存的结构
+
+> 近期访问过的目录文件会缓存在内存中
+>
+> 不用每次都从磁盘读入,可以加快检索速度
+
+![image-20220829065849844](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290658011.png)
