虚拟文件系统以及文件系统的挂载(安装)  主要是iNode(外存->内存)以及VNode(内存,包括文件名,文件大小,函数功能指针等等信息)      挂载点(新加卷或者可移动硬盘)

--- a/操作系统/第四章-文件管理.md
+++ b/操作系统/第四章-文件管理.md
@@ -284,7 +284,7 @@
 
 ![image-20220828093012046](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208280930099.png)
 
-### !!!索引分配
+### !!!索引分配UFS
 
 > 文件的`索引表`类似于内存的`页表`
 
@@ -723,3 +723,33 @@ void r() {
 > 不用每次都从磁盘读入,可以加快检索速度
 
 ![image-20220829065849844](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290658011.png)
+
+## 4.3_3 虚拟文件系统
+
+> 普通文件系统,对于程序员来讲难以操作不同的接口
+
+![image-20220829071811606](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290718597.png)
+
+> 引入虚拟文件系统
+
+![image-20220829072236112](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290722444.png)
+
+### `VNode`&`iNode`
+
+> 适用统一的数据结构`VNode`解决不同文件的数据结构的问题
+
+![image-20220829073117640](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290731619.png)
+
+#### 函数功能指针
+
+![image-20220829074533546](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290745726.png)
+
+### 文件系统的挂载(安装)
+
+![image-20220829083737998](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290837914.png)
+
+#### 挂载点
+
+> 也就是新加卷或者可移动硬盘
+
+![image-20220829083851291](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290838607.png)
