I/O设备分为机械部件以及电子部件;  电子部件(I/O控制器):CPU与I/O机械部件之间的中介  ,内含有控制寄存器(接受CPU发送的命令),状态寄存器(记录当前I/O设备的状态),数据寄存器以及地址识别的功能    内存映像I/O 以及 寄存器独立编址:实际上就是寄存器的地址和内存的地址是否连续,,以及是否需要专门的指令才能进行相应的操作

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -26,3 +26,32 @@
 
 ![image-20220829090440302](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290904499.png)
 
+## 5.1_2 I/O控制器
+
+![image-20220829090935496](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290909874.png)
+
+### 机械部件
+
+![image-20220829091048840](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208290910145.png)
+
+### 电子部件(I/O控制器)
+
+> CPU和I/O机械部件之间的`中介`
+
+![image-20220829102539577](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291025717.png)
+
+###  I/O控制器的组成
+
+![image-20220829125212093](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291252279.png)
+
+#### 小细节
+
+![image-20220829125303669](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291253867.png)
+
+##### 内存映像I/O `VS` 寄存器独立编址
+
+![image-20220829130340103](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291303337.png)
+
+### 总结
+
+![image-20220829130627794](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291306031.png)
