I/O控制方式:1.程序直接控制方式 2.中断驱动方式(在指令结束之后,IO向CPU发出中断,此时通过中断隐指令(保存断点,关中断,CPU引出中断处理程序) 3.DMA方式(直接存取方式,只能读连续的数据块) 4.通道控制方式(弱鸡版CPU,硬件,一组块数据)

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -55,3 +55,51 @@
 ### 总结
 
 ![image-20220829130627794](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291306031.png)
+
+## 5.1_3 I/O控制方式
+
+![image-20220829131433708](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291314369.png)
+
+### 程序直接控制方式
+
+![image-20220829143757086](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291437474.png)
+
+#### 轮询
+
+> 导致CPU与I/O`串行`
+
+![image-20220829161338015](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291613494.png)
+
+
+
+![image-20220829163733380](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291637583.png)
+
+### 中断驱动方式
+
+> CPU与I/O`并行`
+
+![image-20220829164039133](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291640312.png)
+
+![image-20220829164405500](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291644749.png)
+
+### DMA方式
+
+![image-20220829165934927](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291659619.png)
+
+#### DMA控制器
+
+![image-20220829170348147](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291703639.png)
+
+![image-20220829170623871](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291706137.png)
+
+### 通道控制方式
+
+![image-20220829170923614](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291709988.png)
+
+![image-20220829171129397](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291711796.png)
+
+### 总结
+
+> 减少CPU干预频率
+
+![image-20220829171253756](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291712167.png)
