I/O软件层次结构:用户层软件,设备独立性软件,设备驱动程序

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -103,3 +103,73 @@
 > 减少CPU干预频率
 
 ![image-20220829171253756](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291712167.png)
+
+## 5.1_4 I/O软件层次结构
+
+![image-20220829172328684](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291723407.png)
+
+### 用户层软件
+
+> 使用`系统调用`
+
+![image-20220829183107002](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291831494.png)
+
+### 设备独立性软件
+
+1. 调用接口
+
+![image-20220829183758631](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291838126.png)
+
+2. 设备保护
+
+![image-20220829183830767](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291838512.png)
+
+3. 差错处理
+
+![image-20220829183934918](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291839776.png)
+
+4. 设备的分配与回收
+
+![image-20220829184019932](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291840828.png)
+
+5. 数据缓冲区管理
+
+![image-20220829184154481](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291841845.png)
+
+6. 建立物理-逻辑设备的映射关系&`LUT`
+
+![image-20220829184405259](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291844714.png)
+
+![image-20220829184625909](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291846476.png)
+
+#### 不同的设备需要不同的设备驱动程序?
+
+- 佳能打印机
+
+![image-20220829191747244](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291917063.png)
+
+- 惠普打印机
+
+![image-20220829191819012](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291918904.png)
+
+> 不同厂家的执行程序不同,因此需要提供对应的驱动程序
+
+![image-20220829191922312](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291919871.png)
+
+### 设备驱动程序
+
+> 不同设备,硬件特性不一,设备驱动方便控制对应的硬件
+
+![image-20220829192113510](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291921720.png)
+
+### 中断处理程序
+
+> 处理顺序依次由
+>
+> `中断处理`->`设备驱动程序`->`设备独立性软件`->`用户层软件`
+
+![image-20220829192635220](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291926856.png)
+
+### 总结
+
+![image-20220829193203719](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291932844.png)
