1.输入输出应用程序接口(1.字符设备接口(不可寻址,类似于键盘) 2.块设备接口(可寻址) 3.网络设备接口(Socket+端口号实现安全传输)      2.设备驱动程序接口:由于设备的内部结构不一样,因此操作系统会给出一套标准,,不同的厂商按需开发即可...

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -173,3 +173,29 @@
 ### 总结
 
 ![image-20220829193203719](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291932844.png)
+
+## 5.1_5 接口
+
+![image-20220829194245995](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291942256.png)
+
+### 输入/输出应用程序接口
+
+![image-20220829195924885](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208291959055.png)
+
+#### 套接字系统调用
+
+![image-20220829200429582](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292004827.png)
+
+![image-20220829210239035](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292102549.png)
+
+![image-20220829210411537](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292104785.png)
+
+### 阻塞I/O以及非阻塞I/O
+
+![image-20220829210740568](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292107180.png)
+
+### 设备驱动程序接口
+
+![image-20220829211113000](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292111852.png)
+
+![image-20220829211150157](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292111712.png)
