I/O核心子系统(I/O系统):设备独立性软件(大部分模块:I/O调度,设备保护,设备分配于回收,缓冲区管理(缓冲与高速缓存管理)),设备驱动程序,中断处理程序...

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -199,3 +199,19 @@
 ![image-20220829211113000](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292111852.png)
 
 ![image-20220829211150157](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292111712.png)
+
+## 5.2_1 I/O核心子系统
+
+![image-20220829212024812](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292120091.png)
+
+### 各功能在哪些层次实现
+
+#### I/O调度
+
+![image-20220829212727888](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292127120.png)
+
+#### 设备保护
+
+> 本质上也是文件保护,关于访问权限的问题
+
+![image-20220829212936895](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292129504.png)
