脱机技术:外围控制机器+更高速的设备--磁带,缓解设备与CPU速度的矛盾... 假脱机技术(Spolling):实现独占式打印机虚拟成共享打印机....   输入输出井:磁带    输入输出进程:模拟脱机技术的外围控制机  输入输出缓冲区:内存的缓冲区,,输入输出的中转站...

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -215,3 +215,39 @@
 > 本质上也是文件保护,关于访问权限的问题
 
 ![image-20220829212936895](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292129504.png)
+
+## 5.2_2 假脱机技术(Spooling)
+
+### 何为脱机技术
+
+![image-20220829213529176](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292135555.png)
+
+> 批处理,引入了脱机技术(磁带完成)
+
+![image-20220829213724113](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208292137418.png)
+
+### 假脱机技术
+
+> 以软件的方式模拟脱机技术
+>
+> `输入输出井`充当`磁带`的临时接收数据作用
+>
+> `输入输出进程`充当`外围控制机`的作用
+>
+> 必须有`多道程序技术`的支持
+
+![image-20220830065728542](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300657045.png) 
+
+### 共享打印机原理分析
+
+![image-20220830070318670](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300703777.png)
+
+![image-20220830070941228](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300709531.png)
+
+> `虚拟逻辑`,将`独占式设备`改造成`共享设备`
+
+![image-20220830071100409](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300711454.png)
+
+### 总结
+
+![image-20220830072229938](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300722991.png)
