设备的分配与回收:分配时需要考虑的因素:1.固有属性:(独占设备,共享设备,虚拟设备等等) 2.设备的分配算法:FIFO,LRU...3.设备分配的安全性...   分配分为静态分配和动态分配(破坏的是请求和保持功能)       设备分配的数据结构:1.设备分配表(DCT) 2.控制器控制表(COCT) 3.通道控制表(CHCT) 4.系统设备表(SDT)        设备分配的步骤:由设备名->系统设备表SDT -> 通道控制表CHCT -> 控制器控制表COCT -> 设备分配表DCT            改进版:加入了逻辑设备表LUT,实现物理地址到逻辑地址的映射

--- a/操作系统/第五章-设备管理.md
+++ b/操作系统/第五章-设备管理.md
@@ -251,3 +251,65 @@
 ### 总结
 
 ![image-20220830072229938](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300722991.png)
+
+## 5.2_3 设备的分配与回收
+
+![image-20220830080313830](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300803008.png)
+
+### 设备分配时考虑的因素
+
+#### 固有属性
+
+![image-20220830081101824](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300811389.png)
+
+#### 分配算法
+
+![image-20220830081156828](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300811568.png)
+
+#### 设备分配的安全性
+
+![image-20220830081614601](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300816553.png)
+
+### 静态分配和动态分配
+
+![image-20220830082230575](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300822074.png)
+
+### 设备分配的数据结构
+
+![image-20220830082521788](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300825874.png)
+
+#### 1.设备分配表DCT
+
+![image-20220830082745989](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300827202.png)
+
+#### 2.控制器控制表COC T
+
+![image-20220830083238100](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300832659.png)
+
+#### 3.通道控制表CHCT
+
+![image-20220830083448495](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300834829.png)
+
+#### 4.系统设备表SDT
+
+![image-20220830083708000](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300837246.png)
+
+### 设备分配的步骤
+
+![image-20220830083839878](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300838196.png)
+
+![image-20220830094427126](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300944228.png)
+
+#### 改进
+
+![image-20220830094644467](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300946086.png)
+
+##### 新增逻辑设备表LUT
+
+![image-20220830095339986](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300953880.png)
+
+![image-20220830095552872](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300955214.png)
+
+### 总结
+
+![image-20220830095839946](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208300958400.png)
